// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SearchContainer page component it renders correctly when films are provided 1`] = `
<Fragment>
  <HelmetWrapper
    defer={true}
    encodeSpecialCharacters={true}
  >
    <title>
      Movie Search
    </title>
  </HelmetWrapper>
  <Header>
    <div
      className="padding-controls"
    >
      <SiteName />
      <SearchForm
        onSearchChange={[Function]}
        search=""
        searchBy="title"
      />
    </div>
  </Header>
  <main
    className="content"
  >
    <LoadingBlock
      hideText={false}
      isLoaded={true}
    >
      <LoadableComponent
        displayCount={15}
        films={
          Array [
            Object {
              "budget": 15000000,
              "genres": Array [
                "some genre",
                "another genre",
              ],
              "id": 1,
              "overview": "Once upon a time...",
              "poster_path": "https://picsum.photos/g/300/450/?random",
              "release_date": "2018-05-04",
              "revenue": 59735548,
              "tagline": "Put that cookie down",
              "title": "Film title",
              "vote_average": 7.5,
              "vote_count": 667,
            },
          ]
        }
        foundCount={1}
        onSortByChange={[Function]}
        sortBy="release_date"
      />
    </LoadingBlock>
  </main>
  <Footer />
</Fragment>
`;

exports[`SearchContainer page component it renders correctly when no films found 1`] = `
<Fragment>
  <HelmetWrapper
    defer={true}
    encodeSpecialCharacters={true}
  >
    <title>
      Movie Search
    </title>
  </HelmetWrapper>
  <Header>
    <div
      className="padding-controls"
    >
      <SiteName />
      <SearchForm
        onSearchChange={[Function]}
        search=""
        searchBy="title"
      />
    </div>
  </Header>
  <main
    className="content"
  >
    <LoadingBlock
      hideText={false}
      isLoaded={true}
    >
      <LoadableComponent
        className="font-size-header font-bold color-alt"
      >
        No movies found
      </LoadableComponent>
    </LoadingBlock>
  </main>
  <Footer />
</Fragment>
`;
